test/testdata/nil/invalid_binary_op_error.lox
nil - nil; // error: - operator cannot be used with types nil and nil
